# uuv_simulator_ros2

./: README.md
uuv_assistants/: CMakeLists.txt  package.xml
uuv_assistants/launch/: message_to_tf_launch.py  publish_body_sname_launch.py  publish_footprints_launch.py  publish_vehicle_footprint_launch.py  publish_world_ned_frame_launch.py  set_simulation_timer_launch.py  unpause_simulation_launch.py
uuv_assistants/scripts/: create_new_robot_model  create_thruster_manager_configuration  publish_footprints.py  publish_vehicle_footprint.py  publish_world_models.py  set_simulation_timer.py  unpause_simulation.py
uuv_assistants/src/: message_to_tf.cpp
